--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "A Rest API backend for the Yik Yak clone",
   "main": "server.js",
-  "author": "David Berri <dwbwill@gmail.com>,
-  "license": "MIT"
+  "author": "David Berri <dwbwill@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^1.19.2"
